# stock-research-assistant

./: .gitignore  .gitleaks.toml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  RUNBOOK.md  SECURITY.md  app.py  logic.py  payment.py  pyproject.toml  requirements-dev.in  requirements.txt  ui.py  yf_client.py
.github/: pull_request_template.md
.streamlit/: config.toml  secrets.toml.example
core/: __init__.py  ai_policy.py  models.py  research_contracts.py  research_router.py  research_validation.py  skills.py
data/: symbol_master_nse.json
deep_research/: __init__.py  analyst_targets.py  financial_trends.py  governance.py  peer_analysis.py  report.py  risk_flags.py  screener_client.py  thesis_agent.py  valuation.py
docs/: SKILL_ARCHITECTURE.md  THREAT_MODEL.md
eval/: __init__.py  run_research_evals.py  workflow_cases.yaml
research_tools/: __init__.py  external_research.py  market_context.py
scripts/: health_monitor.py  quality.sh
services/: __init__.py  analysis_pipeline.py  document_client.py  error_logging.py  kite_client.py  market_data.py  report_history.py  research_orchestrator.py  research_presenter.py  research_workflow.py  symbol_master.py
specs/: institutional_report_spec.md  production_test_base_refactor_spec.md  symbol_master_resolver_spec.md  ticker_resolver_fix_spec.md  ui_cleanup_spec.md  web_search_market_data_fallback_spec.md
tests/: conftest.py  test_app.py  test_app_coverage_boost.py  test_app_coverage_gaps.py  test_app_critical.py  test_app_final_coverage.py  test_critical_gaps.py  test_deep_research.py  (+21 more)
(+17 files in other folders)
