[project]
name = "stock-research-assistant"
version = "0.1.0"
description = "Evidence-grounded NSE/BSE equity research with explicit educational-use boundaries."
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = { file = "LICENSE" }
authors = [{ name = "Touseef Shaik" }]
dynamic = ["dependencies"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
follow_imports = "skip"
ignore_missing_imports = true
warn_unused_ignores = true
